--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>
-			Frontend Mentor | Article Preview Component | React | Styled
+			Frontend Mentor | Article Preview Component | React - Styled
 			Components
 		</title>
 
